plugins {
    id("java")
    id("java-library")
    id("maven")
    id("maven-publish")
    id("com.jfrog.bintray") version("1.8.5")
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

project.group = "user11681"
project.version = "0.11.5"

repositories {
    mavenCentral()

    maven{url = "https://dl.bintray.com/user11681/maven"}
}

dependencies {
    api("net.gudenau.lib:unsafe:+")
    api("it.unimi.dsi:fastutil:+")

    testImplementation("org.junit.jupiter:junit-jupiter:+")
    testImplementation("org.apache.logging.log4j:log4j-core:+")
}

bintray {
    user = System.getenv("BINTRAY_USER")
    key = System.getenv("BINTRAY_API_KEY")
    publications = ["bintray"]
    publish = true

    pkg {
        name = project.name
        repo = "maven"
        licenses = ["LGPL-3.0"]
        vcsUrl = "https://github.com/user11681/reflect"

        version {
            name = project.version
            released = new Date()
            githubRepo = "user11681/reflect"
            issueTrackerUrl = "https://github.com/user11681/reflect/issues"
        }
    }
}

task sourceJar(type: Jar, dependsOn: classes) {
    archiveClassifier.set("sources")

    from(sourceSets.main.allSource)
}

artifacts {
    archives(sourceJar)
}

publishing {
    publications {
        bintray(MavenPublication) {
            groupId(project.group)
            artifactId(project.name)
            version(project.version)

            artifact(jar)
            artifact(sourceJar)
        }
    }

    repositories {
        mavenLocal()
    }
}
